# Femme-coccyx-Datos

./: .classpath  .project  SendToC.txt  SendToJava.txt
src/Azure/: desktop.ini
src/Tarea_3_Comparar/: CMakeLists.txt  JavaConection.cpp  JavaConection.h  JsonParser.cpp  JsonParser.h  SampleImage.cpp  arbolavl.cpp  conectar.cpp  conectar.h  document.json  main.cpp  monticulo.cpp  node.cpp  node.h
src/TextStuff/: Azure.java  BPlusTree.java  BTreeSet.java  JunctionBP.java  LeafBP.java  LinkBP.java  SampleText.java  TextAnalyzer.java  main.java
src/Trees4Text/: BPlus.java  Junction.java  Leaf.java  Link.java
src/c_connection/: CConnection.java  Grafo.java  Node.java
src/graphic_interface/: Ui.java  UiController.java  UiView.java
src/image_analysis/: ImageAnalyzer.java  SampleImage.java  Tagger.java
src/image_modifier/: Modifier.java
src/internet_connection/: Azure.java  AzureConection.java  InternetConection.java  Tag.java
src/lib/: iConstants.java
src/text_analysis/: SampleText.java  TextAnalyzer.java
